2010-06-11  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/tester/httpclient.py:
	And delete old commented old-style raises

2010-06-11  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/tester/httpclient.py:
	Don't raise an string as it is not allowed in python2.6 and wіll fail

2010-06-11  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/feedcomponent.py:
	Add remote method to trigger dumping a graphviz dot file of the
	GStreamer pipeline. The job still needs to run with the
	GST_DEBUG_DUMP_DOT_DIR environment variable set.

2010-06-11  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion.doap:
	Update for 0.6.1 release.

2010-06-11  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/feedcomponent010.py:
	Add method to dump a graphviz dot file.
	Run it on state change.
	Only gets run if GST_DEBUG_DUMP_DOT_DIR environment is set.

2010-06-11  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/admin/gtk/dialogs.py:
	Update the list of authors.

2010-06-10  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/component/converters/overlay/genimg.py:
	'get_data()' is in pycairo since 1.2.6. replace it with
	'get_data_as_rgba()' for earlier versions.

2010-06-10  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion.spec.in:
	Require python-twisted-web and -names

2010-06-10  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: Josep Ribas

	* flumotion/component/producers/webcam/wizard_gtk.py:
	* flumotion/worker/checks/video.py:
	Parse the FractionRange with the available framerates in the webcam
	check instead of just offering the high value which can quite annoying
	sometimes. Fixes #1425

2010-06-09  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	reviewed by: Jan Urbanski

	* flumotion/manager/admin.py:
	* flumotion/manager/manager.py:
	Add new remote method: invokeOnComponents to invoke a method on